Composited mix-blend-mode inside backdrop-filter doesn't use the backdrop-filter as its composited group. https://bugs.webkit.org/show_bug.cgi?id=149553 <rdar://22854172>

Reviewed by Simon Fraser.

Backdrop-filter creates a stacking context (and isolated group for blend modes), so we should add child layers
onto the primary layer, not as siblings of the backdrop layer.

* LayoutTests/css3/filters/backdrop/backdrop-filter-with-composited-blend-mode-expected.html: Added.
* LayoutTests/css3/filters/backdrop/backdrop-filter-with-composited-blend-mode.html: Added.
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateSublayerList):

Canonical link: https://commits.webkit.org/268477@main